# python-uv-copier

./: README.md  copier.yml  macros.jinja
extensions/: git.py
template/: .pre-commmit-config.yml  LICENSE  LICENSE.jinja  README.md  mise.toml  mkdocs.yml  mkdocs.yml.jinja  prek.toml  pyproject.toml  pyproject.toml.jinja  pyrefly.toml  ruff.toml
template/docs/references/: api.md.jinja  {% if app %}cli.md{% endif %}.jinja
template/scripts/: bump.py
template/src/{{snake}}/: {% if app %}__main__.py{% endif %}.jinja
