[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "test-project" #"{{snake}}"
version = "0.1.0"
description = "description placeholder"
authors = [
    {name = "Philipp Krüger", email = "github.khab3@passinbox.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.18",
    "mkdocstrings[python]>=0.24.3",
    "mike>=2.0.0",
]
test = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
]
dev = [
    "ruff>=0.4.1",
    "pre-commit>=3.7.0",
]
